src/objects/Campaign_Member_Product__c.object
<CustomObject>
    <description>IEC - products ordered by customer for a given Campaign</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>IEC - parent campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Members and Products</relationshipLabel>
        <relationshipName>Campaign_Members_and_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>IEC - Customer to generate renewal notice</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Members and Products</relationshipLabel>
        <relationshipName>Campaign_Members_and_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>IEC - Technical field helping to get the latest quantity ordered</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key2__c</fullName>
        <label>Key2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>IEC - technical field to avoid duplicates</description>
        <label>Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Product to include in renewal notice</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaign Members and Products</relationshipLabel>
        <relationshipName>Campaign_Members_and_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>IEC - Quantity to order for renewal notice</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Member and Product</label>
    <nameField>
        <displayFormat>CMP-{00000000}</displayFormat>
        <label>Member Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Members and Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>